--- a/style.css
+++ b/style.css
@@ -25,3 +25,19 @@ a:link{
     padding: 0;
 
 }
+#label{
+    color:antiquewhite ;
+}
+p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+h1{
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 678;
+    text-decoration:underline;
+    text-decoration-color: rgb(255, 102, 0);
+    text-transform: uppercase;
+}
+a{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
